--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_maps_flutter: ^2.10.0
   geolocator: ^10.0.0
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
