--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   image_picker: ^0.8.7
-
+  path_provider: ^2.0.14
   shared_preferences: ^2.3.4
 
   # The following adds the Cupertino Icons font to your application.
